# PopSAN-spiking_world_model_dreaming

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ant.yaml  default.yaml  halfcheetah.yaml  humanoid.yaml  humanoid_compact.yaml
scripts/: eval_policy.py  train.py
src/spiking_dreamer/: __init__.py  actor.py  critic.py  dreamer.py  ensemble.py  envs.py  eval.py  multiscale.py  neurons.py  population_coding.py  replay_buffer.py  surrogates.py  td3_agent.py  world_model.py
src/spiking_dreamer/envs/: __init__.py  humanoid_compact.py
